--- a/source/css/style.scss
+++ b/source/css/style.scss
@@ -204,16 +204,10 @@ div {
     }
     .post-meta {
         padding: 0;
-        margin: 15px 0 0;
-        color: #6E7173;
+        margin: 10px 0 0;
+        color: #999;
         float: left;
-        display: inline;
         text-indent: .15em;
-        &:before {
-              font-family: "FontAwesome";
-              content: "\f073";
-              padding-right: 0.3em;
-        }
         .category {
             &:before {
               font-family: "FontAwesome";
