feat: 修改文章页面文章信息的相关样式和布局

--- a/layout/post.jade
+++ b/layout/post.jade
@@ -6,7 +6,7 @@ block title
 block content
   .post
     h1.post-title= page.title
-    .post-meta= page.date.format('ll')
+    .post-meta= page.date.format(config.date_format)
       if page.categories.length > 0
         span= ' | '
         span.category
