--- a/source/css/style.scss
+++ b/source/css/style.scss
@@ -209,10 +209,8 @@ div {
         float: left;
         text-indent: .15em;
         .category {
-            &:before {
-              font-family: "FontAwesome";
-              content: "\f07c";
-              padding-right: 0.3em;
+            a {
+                color: #999;
             }
         }
         #busuanzi_value_page_pv {
