feat: 修改归档页面标题样式

--- a/source/css/style.scss
+++ b/source/css/style.scss
@@ -414,7 +414,7 @@ div {
     padding-bottom: .8em;
     h2 {
         margin: 0;
-        font: bold 25px / 1.1 "ff-tisa-web-pro", Cambria, "Times New Roman", Georgia, Times, sans-serif;
+        // font: bold 25px / 1.1 "ff-tisa-web-pro", Cambria, "Times New Roman", Georgia, Times, sans-serif;
     }
     .date {
         padding-right: .7em;
